# rightmove_scraper

./: .env-example  .gitignore  .pre-commit-config.yaml  README.MD  config.py  pyproject.toml  run.py  utils.py
.github/workflows/: pytest.yml
src/: config.py  db.py  log.py  rightmove.py  run.py
tests/: conftest.py  test_logger.py  test_parse.py
tests/data/: scrape_search_response.json  scrape_urls_response.json
