[tool.poetry]
name = "rightmove-scraper"
version = "0.1.0"
description = ""
authors = ["Sam <SsamRroberts@gmail.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
httpx = "^0.27.0"
parsel = "^1.9.1"
asyncio = "^3.4.3"
jmespath = "^1.0.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
